--- a/pom.xml
+++ b/pom.xml
@@ -93,10 +93,18 @@
         <version>${google-api-services-bigquery.version}</version>
       </dependency>
 
+      <!-- Used for JSON type -->
       <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
         <version>2.8.9</version>
+      </dependency>
+
+      <!-- Used for Interval and Range types -->
+      <dependency>
+        <groupId>org.threeten</groupId>
+        <artifactId>threeten-extra</artifactId>
+        <version>1.7.0</version>
       </dependency>
 
       <!-- Test dependencies -->
